# SC25-lsCOMP

./: 0-compile-lsCOMP.py  1-reproducing-main-3-1.py  1-reproducing-main-3-2.py  1-reproducing-main-3-3.py  1-reproducing-main-3-4.py  1-reproducing-main-3-5.py  1-reproducing-main-3-6.py  1-reproducing-main-3-7.py  2-reproducing-optional-3-10.py  2-reproducing-optional-3-11.py  2-reproducing-optional-3-8.py  2-reproducing-optional-3-9.py  3-downloading-open-vis-datasets.py  Dockerfile  README.md
example/: CMakeLists.txt  cssi_conversion.cpp  cssi_truncation.cpp  cuLSZ_cssi.cpp  xpcs_conversion.cpp  xpcs_truncation.cpp
include/: cuLSZ_entry.h  cuLSZ_kernel.h  cuLSZ_utility.h
lsCOMP/: CMakeLists.txt
lsCOMP/example/: CMakeLists.txt  lsCOMP_cssi.cpp  lsCOMP_xpcs.cpp
lsCOMP/include/: cuLSZ_kernel.h  cuLSZ_timer.h
lsCOMP/src/: cuLSZ_entry.cu  cuLSZ_kernel.cu  cuLSZ_timer.cu  cuLSZ_utility.cu
src/: cuLSZ_entry.cu  cuLSZ_kernel.cu  cuLSZ_utility.cu
